Fixed bug #43723 (SOAP not sent properly from client for <choice>)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@267393 c90b9560-bf6c-de11-be94-00142212c4b1